--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
   "author": "Glenn Brown <gbrown@bayareametro.gov>",
   "license": "MIT",
   "scripts": {
-    "doit": "ts-node ./lib/index.ts"
+    "doit": "ts-node ./lib/prepare-extract.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "aws-sdk-client-mock": "^4.1.0",
     "aws-sdk-mock": "^6.2.1",
     "jest": "^30.0.0",
     "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@aws-sdk/client-athena": "^3.828.0",
+    "@aws-sdk/credential-providers": "^3.830.0",
+    "@json2csv/plainjs": "^7.0.6",
+    "@types/minimist": "^1.2.5",
     "csv": "^6.3.11",
-    "fast-csv": "^5.0.2"
+    "dotenv": "^16.5.0",
+    "fast-csv": "^5.0.2",
+    "minimist": "^1.2.8",
+    "winston": "^3.17.0"
   }
 }
